--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,13 +4,14 @@
     left: 0;
     width: 220px;
     height: 100vh;
-    background-color: var(--color-primary);
+    background-color: var(--color-secondary);
     color: white;
     padding: 20px;
     box-shadow: 2px 0 5px rgba(0,0,0,0.1);
     display: flex;
     flex-direction: column;
     z-index: 1000;
+    transition: transform 0.3s ease;
 }
 
 .navbar .flex {
@@ -47,5 +48,5 @@
 }
 
 .nav-links a:hover {
-    color: #1abc9c;
+    color: var(--color-primary);
 }
