--- a/src/Pages/Layout/Layout.css
+++ b/src/Pages/Layout/Layout.css
@@ -20,3 +20,16 @@
 .layout-main {
   padding: 20px;
 }
+
+@media (max-width: 768px) {
+  .layout-content {
+    margin-left: 0;
+  }
+
+  .layout-header {
+    justify-content: space-between;
+    padding: 20px;  
+    width: 100%;
+    margin-top: 10px;
+  }
+}
