--- a/src/Pages/Consultas/Consultas.css
+++ b/src/Pages/Consultas/Consultas.css
@@ -22,6 +22,12 @@ tr:hover {
   color: white;
 }
 
+.footer-table button {
+  font-size: 12px;
+  padding-block: 0.5rem;
+  padding-inline: 0.5rem;
+}
+
 @media (max-width: 1346px) {
   .filtros {
     display: grid;
