--- a/src/Pages/Layout/Layout.css
+++ b/src/Pages/Layout/Layout.css
@@ -1,5 +1,6 @@
 .layout-content {
   margin-left: 220px;
+  height: 100vh;
 }
 
 .layout-header {
@@ -28,7 +29,7 @@
 
   .layout-header {
     justify-content: space-between;
-    padding: 20px;  
+    padding: 20px;
     width: 100%;
     margin-top: 10px;
   }
