--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -7,7 +7,7 @@
     background-color: var(--color-secondary);
     color: white;
     padding: 20px;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     z-index: 1000;
@@ -43,10 +43,11 @@
 .nav-links a {
     color: white;
     text-decoration: none;
-    font-size: 1rem;
+    font-size: 1.1rem;
     transition: color 0.3s;
 }
 
 .nav-links a:hover {
-    color: var(--color-primary);
+    font-weight: bold;
+    border-bottom: 2px solid white;
 }
