--- a/src/Pages/Consultas/Consultas.css
+++ b/src/Pages/Consultas/Consultas.css
@@ -40,4 +40,8 @@ tr:hover {
     display: grid;
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
+
+  .input-filtro {
+    width: 100%;
+  }
 }
